--- a/src/app/modules/entradas/entradas.component.html
+++ b/src/app/modules/entradas/entradas.component.html
@@ -13,19 +13,19 @@
                <mat-form-field appearance="outline" style="width: 100%;" >
                   <mat-label>Productos</mat-label>
                   <mat-select
-                  id="idProducto"
-                  name="idProducto"
-                  formControlName="idProducto"
+                  id="idProbob"
+                  name="idProbob"
+                  formControlName="idProbob"
                   (ngModelChange)="infoProducto(showProduct.value)"
                   #showProduct
                   >
                   <mat-option
                   *ngFor="let item of listaProductos"
-                  [value]="item.idProducto"
-                  >{{ item.nombre }}</mat-option
+                  [value]="item.idProbob"
+                  >{{ item.descripcion }}</mat-option
                      >
                   </mat-select>
-                  <mat-error *ngIf="form.get('idProducto')?.hasError('required')"
+                  <mat-error *ngIf="form.get('idProbob')?.hasError('required')"
                      ><strong class="txt_msg">**Campo requerido</strong></mat-error
                      >
                </mat-form-field>
@@ -44,19 +44,19 @@
                      matInput
                      placeholder="Cantidad de producto"
                      autocomplete="off"
-                     formControlName="cantidad"
-                     id="cantidad"
+                     formControlName="exis"
+                     id="exis"
                      [errorStateMatcher]="matcher"
                      />
                   <mat-error
                      *ngIf="
-                     form.get('cantidad')?.hasError('pattern') &&
-                     !form.get('cantidad')?.hasError('required')
+                     form.get('exis')?.hasError('pattern') &&
+                     !form.get('exis')?.hasError('required')
                      "
                      >
                      <strong class="txt_msg">**Solo se admiten numeros enteros</strong>
                   </mat-error>
-                  <mat-error *ngIf="form.get('cantidad')?.hasError('required')"
+                  <mat-error *ngIf="form.get('exis')?.hasError('required')"
                      ><strong class="txt_msg">**Campo requerido</strong></mat-error
                      >
                </mat-form-field>
@@ -74,19 +74,19 @@
                      min="0"
                      step="0.01"
                      autocomplete="off"
-                     formControlName="precioCompra"
-                     id="precioCompra"
+                     formControlName="precioCaja"
+                     id="precioCaja"
                      [errorStateMatcher]="matcher"
                      />
                   <mat-error
                      *ngIf="
-                     form.get('precioCompra')?.hasError('pattern') &&
-                     !form.get('precioCompra')?.hasError('required')
+                     form.get('precioCaja')?.hasError('pattern') &&
+                     !form.get('precioCaja')?.hasError('required')
                      "
                      >
                      <strong class="txt_msg">**Solo se admiten dos decimales</strong>
                   </mat-error>
-                  <mat-error *ngIf="form.get('precioCompra')?.hasError('required')"
+                  <mat-error *ngIf="form.get('precioCaja')?.hasError('required')"
                      ><strong class="txt_msg">**Campo requerido</strong></mat-error
                      >
                </mat-form-field>
@@ -104,19 +104,19 @@
                      min="0"
                      step="0.01"
                      autocomplete="off"
-                     formControlName="precioVenta"
-                     id="precioVenta"
+                     formControlName="precciosucu"
+                     id="precciosucu"
                      [errorStateMatcher]="matcher"
                      />
                   <mat-error
                      *ngIf="
-                     form.get('precioVenta')?.hasError('pattern') &&
-                     !form.get('precioVenta')?.hasError('required')
+                     form.get('precciosucu')?.hasError('pattern') &&
+                     !form.get('precciosucu')?.hasError('required')
                      "
                      >
                      <strong class="txt_msg">**Solo se admiten dos decimales</strong>
                   </mat-error>
-                  <mat-error *ngIf="form.get('precioVenta')?.hasError('required')"
+                  <mat-error *ngIf="form.get('precciosucu')?.hasError('required')"
                      ><strong class="txt_msg">**Campo requerido</strong></mat-error
                      >
                </mat-form-field>
@@ -142,10 +142,10 @@
             </thead>
             <tbody>
               <tr *ngFor="let dato of tablaDatos">
-                <td>{{ dato.nombreProducto }}</td>
-                <td>{{ dato.cantidad }}</td>
-                <td>{{ dato.precioCompra }}</td>
-                <td>{{ dato.precioVenta }}</td>
+                <td>{{ dato.descripcion }}</td>
+                <td>{{ dato.exis }}</td>
+                <td>{{ dato.precioCaja }}</td>
+                <td>{{ dato.precciosucu }}</td>
                 <td>{{ dato.fechaEntrada }}</td>
               </tr>
             </tbody>
