--- a/src/app/modules/ventas/ventas.component.html
+++ b/src/app/modules/ventas/ventas.component.html
@@ -1,91 +1,13 @@
-
 <div >
-   <!--<div class="col-sm-4">
-      <button class="open-cash-register" (click)="mostrarInput()" >
-      <span class="icon"></span>
-      <span class="btn-text" style="color: black;margin-left: 20px;">ABRIR CAJA</span>
-      </button>
-      </div>
-      
-      <div class="col-sm-4">
-      <button class="close-cash-register" style="margin-left: 20px;" (click)="actualizarCaja()" [disabled]="botonDeshabilitado">
-      <span class="icon"></span>
-      <span class="btn-text" style="color: rgb(255, 255, 255);margin-left: 20px;">CERRAR CAJA</span>
-      </button>
-      </div>
-      
-      <div class="col-sm-4">
-      <button class="ver-cash-register" style="float: right;" routerLink="../verCorte">
-      <span class="icon"></span>
-      <span class="btn-text" style="color: rgb(255, 255, 255);margin-left: 20px;">VER CORTE</span>
-      </button>
-      </div>-->
-   <!-- <form [formGroup]="formularioCaja">
-      <div *ngIf="botonProductos && !mostrarLasVentas">
-        <h1>¿Deseas continuar?</h1>
-         <div style="display: flex; justify-content: center;">
-            <button style="background-color: rgb(240, 240, 240); color: rgb(0, 0, 0); padding: 10px 20px; 
-               border-radius: 5px; border: 1px solid black; color: black; cursor: pointer; transition: background-color 0.3s ease; width: 90%;"  (click)="mostrarP()">Continuar caja</button>
-         </div>
-      </div>
-      <div class="row">
-      <div class="row" *ngIf="!mostrarProductos && mostrarInputFlag &&!botonProductos && !mostrarLasVentas">
-        <div>
-            <br/><br/>
-            <label>¿Con cuánto dinero empiezas el turno? *</label>
-            <input class="number" type="number" id="cashInput" placeholder="Ingrese el monto" style="margin-top: 10px;" formControlName="cantidadDineroExistente">
-         </div>
-         <div class="col-sm-6">
-            <br/>
-            <label>Fecha actual:</label>
-            <input type="text" id="fechaInput" [value]="fecha"  formControlName="fechaApertura" [disabled]="modoLectura">
-         </div>
-         <br/><br/>
-         <div class="col-sm-12"></div>
-         <div class="col-sm-6">
-            <br/>
-            <button style="width: 50%;   background-color: #fd9727; display: inline-flex;
-               align-items: center;
-               padding: 10px 20px;
-               font-size: 16px;
-               border: none;
-               border-radius: 5px;" (click)="mostrarCaja()">
-            Empezar turno
-            </button>
-         </div>
-      </div>
-      </form>-->
-   <div class="title"  mat-dialog-title>
-      <label>VENTAS</label>
-      <button mat-icon-button (click)="toggleMaximize()">
-         <mat-icon>{{ isMaximized ? 'fullscreen_exit' : 'fullscreen' }}</mat-icon>
-       </button>
+   <div class="title header-container"  mat-dialog-title>
+      <label class="ventas-label">VENTAS</label>
+      <div class="button-container">
+         <button mat-icon-button (click)="toggleMaximize()">
+           <mat-icon>{{ isMaximized ? 'fullscreen_exit' : 'fullscreen' }}</mat-icon>
+         </button>
+       </div>
    </div>
-   <div  mat-dialog-content>
-      <!-- <div *ngIf="mostrarProductos && cerrarCaja">
-         <div class="search-label">
-            <h2 style="margin-right: 15px;">Busca a tu cliente:</h2>
-            <div class="search-container" (click)="abrirDialogo()">
-               <input type="text" class="search-input" placeholder="Buscar..." disabled>
-               <img src="https://media.istockphoto.com/id/1135487794/es/vector/icono-de-b%C3%BAsqueda-ilustraci%C3%B3n-vectorial-aislada-en-el-bot%C3%B3n-cuadrado-plano.jpg?s=612x612&w=0&k=20&c=2f7Km0xyaXPdL9IEH7Ep4y4tLwj0HXDxJIEeWGGYfCk=" alt="Imagen" class="search-icon">
-            </div>
-         </div>
-         <div class="row" *ngIf="cliente">
-            <h1>Información</h1>
-            <div class="col-sm-4">
-               <h3>ID CLIENTE:</h3>
-               <input type="text" id="id" name="id" [value]="cliente.ID_Cliente || ''" disabled><br><br>
-               
-            </div>
-            <div class="col-sm-4">
-               <h3>NOMBRE:</h3>
-               <input type="text" id="nombreCompleto" name="nombreCompleto" [value]="cliente.nombre + ' ' + cliente.apPaterno + ' ' + cliente.apMaterno || ''" disabled>
-            </div>
-            <div class="col-sm-4">
-               <h3>EMAIL:</h3>
-               <input type="text" id="email" name="email" [value]="cliente.email || ''" disabled><br><br>
-            </div>
-         </div>-->
+   <div  mat-dialog-content [ngClass]="{'maximized': isMaximized}">
       <div>
          <br>
          <h3>Ingresa el valor de una columna</h3>
@@ -103,11 +25,11 @@
                <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
                <th mat-header-cell *matHeaderCellDef>{{ column | titlecase }}</th>
                <td mat-cell *matCellDef="let prod">
+                  {{ prod[columnMapping[column]] }}
                   <ng-container *ngIf="column !== 'cantidad'">
                      {{ prod[column] }}
                   </ng-container>
                   <ng-container *ngIf="column === 'cantidad'">
-                  
                         <input matInput [(ngModel)]="prod.cantidad" type="number" min="0" class="custom-input custom-mat-form-field" (keyup.enter)="validarYAgregarProducto(prod)" />
                   </ng-container>
                   <ng-container *ngIf="column === 'acciones'">
@@ -136,10 +58,10 @@
                </thead>
                <tbody>
                   <tr *ngFor="let selectedProduct of selectedProducts">
-                     <td>{{ selectedProduct.nombre }}</td>
+                     <td>{{ selectedProduct.nombreProducto }}</td>
                      <td >{{ selectedProduct.cantidad }}</td>
-                     <td>${{ selectedProduct.precio }}</td>
-                     <td>${{ selectedProduct.precio * selectedProduct.cantidad }}</td>
+                     <td>${{ selectedProduct.precioSucursal }}</td>
+                     <td>${{ selectedProduct.precioSucursal * selectedProduct.cantidad }}</td>
                   </tr>
                </tbody>
             </table>
