--- a/src/app/modules/configuracion/configuracion.component.html
+++ b/src/app/modules/configuracion/configuracion.component.html
@@ -44,74 +44,10 @@
 				   <li>
 					  <img src="../../../../../assets/img/ubicacion.png" width="60px" alt="Icono direccion" style="margin-right: 20px;margin-left: 10px; ">
 					  <mat-form-field appearance="outline" class="inputs_properties"  required>
-						 <mat-label>Estado</mat-label>
-						 <input type="text" placeholder="Estado" matInput autocomplete="off" id="estado" formControlName="estado" />
-					  </mat-form-field>
-					  <mat-form-field appearance="outline" class="inputs_properties" style="margin-left: 32px;" required>
-						 <mat-label>Ciudad</mat-label>
-						 <input type="text" placeholder="ciudad" matInput autocomplete="off" id="ciudad" formControlName="ciudad" />
+						 <mat-label>Direccion</mat-label>
+						 <input type="text" placeholder="Direccion" matInput autocomplete="off" id="direccion" formControlName="direccion" />
 					  </mat-form-field>
 				   </li>
-				   <li style="margin-left: 58px;">
-					  <mat-form-field appearance="outline" class="inputs_properties" style="margin-left: 32px;" required>
-						 <mat-label>Colonia</mat-label>
-						 <input type="text" placeholder="colonia" matInput autocomplete="off" id="colonia" formControlName="colonia" />
-					  </mat-form-field>
-					  <mat-form-field appearance="outline" class="inputs_properties" style="margin-left: 30px;" required>
-						 <mat-label>Calle</mat-label>
-						 <input type="text" placeholder="calle" matInput autocomplete="off" id="calle" formControlName="calle" />
-					  </mat-form-field>
-				   </li>
-				   <li style="margin-left: 58px;">
-					  <mat-form-field appearance="outline" class="inputs_properties" style="margin-left: 30px; width: 170px;" required>
-						 <mat-label>Codigo postal</mat-label>
-						 <input type="text" placeholder="codigoPostal" matInput autocomplete="off" id="codigoPostal" formControlName="codigoPostal" />
-					  </mat-form-field>
-					  <mat-form-field appearance="outline" class="inputs_properties" style="margin-left: 30px; width: 170px;" required>
-						 <mat-label>numExt</mat-label>
-						 <input type="text" placeholder="numExt" matInput autocomplete="off" id="numExt" formControlName="numExt" />
-					  </mat-form-field>
-					  <mat-form-field appearance="outline" class="inputs_properties" style="margin-left: 30px; width: 170px;" required>
-						 <mat-label>numInt</mat-label>
-						 <input type="text" placeholder="numInt" matInput autocomplete="off" id="numInt" formControlName="numInt" />
-					  </mat-form-field>
-				   </li>
-				</div>
-				<div class="card" style="font-size: 18px;margin-top: 30px;">
-				   <li style="font-size: 18px;">
-					  <img src="../../../../../assets/img/disponible.png" width="60px" alt="Icono teléfono" style="margin-right: 20px;margin-left: 20px; ">
-					  <strong style="font-size: 18px;">DISPONIBILIDAD</strong>
-				   </li>
-				   <ul>
-					  <p>
-						 <label style="margin-left: 45px;" for="casilleros" class="large-text">Casilleros:</label>
-						 <mat-radio-group style="margin-left: 70px;" formControlName="casilleros" id="casilleros" class="custom-radio-group" color="warn" required>
-							<mat-radio-button value="1" class="custom-radio-button">Sí</mat-radio-button>
-							<mat-radio-button value="0" class="custom-radio-button">No</mat-radio-button>
-						 </mat-radio-group>
-					  </p>
-					  <p>
-						 <label style="margin-left: 45px;" for="estacionamiento" class="large-text">Estacionamiento:</label>
-						 <mat-radio-group style="margin-left: 15px;" id="estacionamiento" formControlName="estacionamiento" class="custom-radio-group" color="warn" required>
-							<mat-radio-button value="1" class="custom-radio-button">Sí</mat-radio-button>
-							<mat-radio-button value="0" class="custom-radio-button">No</mat-radio-button>
-						 </mat-radio-group>
-					  </p>
-					  <p>
-						 <label style="margin-left: 45px;" for="regaderas" class="large-text">Regaderas:</label>
-						 <mat-radio-group style="margin-left: 63px;" id="regaderas" formControlName="regaderas" class="custom-radio-group" color="warn" required>
-							<mat-radio-button value="1" class="custom-radio-button">Sí</mat-radio-button>
-							<mat-radio-button value="0" class="custom-radio-button">No</mat-radio-button>
-						 </mat-radio-group>
-					  </p>
-					  <p>
-						 <label style="margin-left: 45px;" for="bicicletero" class="large-text">Bicicletero:</label>
-						 <mat-radio-group style="margin-left: 63px;" id="bicicletero" formControlName="bicicletero" class="custom-radio-group" color="warn" required>
-							<mat-radio-button value="1" class="custom-radio-button">Sí</mat-radio-button>
-							<mat-radio-button value="0" class="custom-radio-button">No</mat-radio-button>
-						 </mat-radio-group>
-					  </p>
-				   </ul>
 				</div>
 			 </div>
 			 <br>
